# passifypdf

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CONTRIBUTING.md  README.md  UI-README.md  create_issues.sh  pyproject.toml  requirements-webui.txt  setup.py
.github/workflows/: build-binaries.yml  ci.yml  python-ci.yml
app/: streamlit_app.py
docs/: BENCHMARKS.md  CLI_OPTIONS.md  HARDWARE_AES_RESEARCH.md  OS_CONTEXT_MENU.md  todo.txt
passifypdf/: __init__.py  cli.py  encryptpdf.py
tests/: test_encryptpdf.py  test_encryptpdf_example.py
tests/benchmarks/: bench_encrypt.py
tests/integrationtests/: test_encryptpdf_integration.py
tests/unittests/: test_cli.py  test_encryptpdf.py
