[project]
name = "passifypdf"
version = "1.0.0"
description = "Protect PDF by a password of your choice"
authors = [
    {name = "Nirmal Chandra", email = "nirmal.fleet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pypdf>=4.3.1",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "pytest",
    "pytest-cov",
]

[project.scripts]
passifypdf = "passifypdf.encryptpdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
